--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ li {
 	width: 3px;
 }
 ::-webkit-scrollbar-thumb {
-	background-color: #4c4c6a;
+	background-color: #e2e2e2;
 	border-radius: 2px;
 }
 
