--- a/src/containers/home/homePage/DetailListSubType/detailListSubType.scss
+++ b/src/containers/home/homePage/DetailListSubType/detailListSubType.scss
@@ -4,6 +4,7 @@
   margin: auto;
   padding-bottom: 80px;
   position: relative;
+  margin: auto;
   .info-type-subtype {
     h4 {
       color: #222325;
